--- a/index.html
+++ b/index.html
@@ -8,5 +8,64 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body></body>
+  <body>
+    <h1 class="main-title" id="main-title"><span>Main</span> Title</h1>
+    <p class="description" id="first-description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias debitis rem dolorum eveniet assumenda tempore quod.
+      Quasi voluptatibus dolore eum quod odit. Excepturi rem possimus, assumenda velit aliquid animi hic.
+    </p>
+    <p class="description" id="second-description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae repudiandae voluptatibus pariatur suscipit
+      consequuntur ut delectus, sapiente dolor porro eius accusamus laudantium laboriosam, fugiat magni facilis quam
+      dignissimos, quod illo!
+    </p>
+
+    <section class="first-section">
+      <ul class="list">
+        <li class="list-item">
+          <a class="list-link" href="">link 1</a>
+        </li>
+        <li class="list-item">
+          <a class="list-link" href="">link 2</a>
+        </li>
+        <li class="list-item">
+          <a class="list-link" href="">link 3</a>
+        </li>
+        <li class="list-item">
+          <a class="list-link" href="">link 4</a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="second-section">
+      <ul class="list">
+        <li class="list-item">
+          <a class="list-link" href="">link 1</a>
+        </li>
+        <li class="list-item">
+          <a class="list-link" href="">link 2</a>
+        </li>
+        <li class="list-item">
+          <a class="list-link" href="">link 3</a>
+        </li>
+        <li class="list-item">
+          <a class="list-link" href="">link 4</a>
+        </li>
+      </ul>
+    </section>
+
+    <ul class="menu">
+      <li class="item">
+        <ul class="submenu">
+          <li class="item">submenu item 1</li>
+          <li class="item">submenu item 2</li>
+          <li class="item">submenu item 3</li>
+          <li class="item">submenu item 4</li>
+        </ul>
+      </li>
+      <li class="item">item 2</li>
+      <li class="item">item 3</li>
+      <li class="item">item 4</li>
+    </ul>
+  </body>
 </html>
