--- a/index.html
+++ b/index.html
@@ -5,55 +5,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply Chocolate</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">SIMPLY CHOCOLATE</a>
+    <!-- Page Header -->
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="site-logo" href="./index.html"><i>SIMPLY</i> CHOCOLATE</a>
 
-        <ul>
-          <li>
-            <a href="./index.html">Home</a>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="./index.html">Home</a>
           </li>
-          <li>
-            <a href="#making-process">How it’s made?</a>
+          <li class="menu-item">
+            <a class="menu-link" href="#making-process">How it’s made?</a>
           </li>
-          <li>
-            <a href="#reviews">Chocolate is loved</a>
+          <li class="menu-item">
+            <a class="menu-link" href="#reviews">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
-      <section>
-        <h1>Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h1>
-        <button type="button">Buy now</button>
-        <a href="#making-process">How it’s made</a>
-        <a href="#benefits">scroll down</a>
+      <!-- Hero section -->
+      <section class="hero">
+        <h1 class="main-title">
+          Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
+        </h1>
+        <button class="buy-now-btn" type="button">Buy now</button>
+        <a class="how-made-link" href="#making-process">How it’s made</a>
+        <a class="scroll-down-link" href="#benefits"> scroll down </a>
       </section>
 
-      <section id="benefits">
-        <h2 hidden>Our benefits</h2>
-        <ul>
-          <li>
-            <h3>Unsurpassed taste</h3>
-            <p>
+      <!-- Benefits section -->
+      <section class="benefits" id="benefits">
+        <h2 hidden>Benefits of our chocolate</h2>
+        <ul class="benefits-list">
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Unsurpassed taste</h3>
+            <p class="benefits-list-text">
               Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent
               experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and
               discover a new level of chocolate bliss.
             </p>
           </li>
-          <li>
-            <h3>Affordable price</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Affordable price</h3>
+            <p class="benefits-list-text">
               Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of
               affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or
               quality. Browse our selection and indulge in affordable luxury today.
             </p>
           </li>
-          <li>
-            <h3>Own production</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-list-title">Own production</h3>
+            <p class="benefits-list-text">
               We take pride in our own production process, ensuring that every step is carefully crafted to perfection.
               From selecting the finest ingredients to handcrafting each piece, our attention to detail is evident in
               every bite.
@@ -62,112 +78,156 @@
         </ul>
       </section>
 
-      <section>
-        <h2>it all adds up to one exceptional taste sensation</h2>
-        <p>
+      <!-- Ingredients section -->
+      <section class="ingredients">
+        <h2 class="section-title">
+          It all adds up to one exceptional
+          <span class="accent-color">taste</span> sensation
+        </h2>
+        <p class="ingredients-description">
           At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing
           of the finest ingredients to the careful crafting of each individual piece, every step of our process adds up
           to one exceptional taste sensation.
         </p>
-        <ul>
-          <li>
-            <img src="./images/ingredients/milk-chocolate.png" alt="milk chocolate" width="206" height="160" />
-            <h3>milk chocolate</h3>
-          </li>
-          <li>
-            <img src="./images/ingredients/milk.png" alt="milk" width="206" height="160" />
-            <h3>milk</h3>
-          </li>
-          <li>
-            <img src="./images/ingredients/nuts.png" alt="nuts" width="206" height="160" />
-            <h3>nuts</h3>
-          </li>
-          <li>
+        <ul class="ingredients-list">
+          <li class="ingredients-list-item">
             <img
+              class="ingredients-list-img"
+              src="./images/ingredients/milk-chocolate.png"
+              alt="milk chocolate"
+              width="206"
+              height="160"
+            />
+            <h3 class="ingredients-list-title">milk chocolate</h3>
+          </li>
+          <li class="ingredients-list-item">
+            <img class="ingredients-list-img" src="./images/ingredients/milk.png" alt="milk" width="206" height="160" />
+            <h3 class="ingredients-list-title">milk</h3>
+          </li>
+          <li class="ingredients-list-item">
+            <img class="ingredients-list-img" src="./images/ingredients/nuts.png" alt="nuts" width="206" height="160" />
+            <h3 class="ingredients-list-title">nuts</h3>
+          </li>
+          <li class="ingredients-list-item">
+            <img
+              class="ingredients-list-img"
               src="./images/ingredients/semi-sweet-choclate.png"
               alt="semi-sweet chocolate"
               width="206"
               height="160"
             />
-            <h3>semi - sweet chocolate</h3>
+            <h3 class="ingredients-list-title">semi - sweet chocolate</h3>
           </li>
         </ul>
       </section>
 
-      <section id="making-process">
-        <h2>how it’s made?</h2>
-        <img src="./images/how-made/how-made.png" alt="chocolate making process" width="600" height="400" />
-        <h3>Try our chocolates today and discover the perfect balance of flavor</h3>
-        <ul>
-          <li>Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
-          <li>At the same time, prepare a water bath. Melt the butter on it.</li>
-          <li>
+      <!-- How made section -->
+      <section class="how-made" id="making-process">
+        <h2 class="section-title">How it’s <span class="accent-color">made</span>?</h2>
+        <img
+          class="how-made-img"
+          src="./images/how-made/how-made.png"
+          alt="chocolate making process"
+          width="600"
+          height="400"
+        />
+        <h3 class="how-made-title">Try our chocolates today and discover the perfect balance of flavor</h3>
+        <ul class="how-made-list">
+          <li class="how-made-list-item">
+            Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.
+          </li>
+          <li class="how-made-list-item">At the same time, prepare a water bath. Melt the butter on it.</li>
+          <li class="how-made-list-item">
             "Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass
             becomes uniform and silky.
           </li>
-          <li>Heat the mixture over low heat, letting it barely boil.</li>
-          <li>
+          <li class="how-made-list-item">Heat the mixture over low heat, letting it barely boil.</li>
+          <li class="how-made-list-item">
             Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.
           </li>
         </ul>
       </section>
 
-      <section id="reviews">
-        <h2>chocolate is loved</h2>
-        <ul>
-          <li>
-            <img src="./images/reviews/victoria-dobrzhanska.png" alt="Victoria Dobrzhanska" width="80" height="80" />
-            <h3>Victoria Dobrzhanska</h3>
-            <p>
+      <!-- Reviews section -->
+      <section class="reviews" id="reviews">
+        <h2 class="section-title"><span class="accent-color">Chocolate</span> is loved</h2>
+        <ul class="reviews-list">
+          <li class="reviews-list-item">
+            <img
+              class="reviews-list-avatar"
+              src="./images/reviews/victoria-dobrzhanska.png"
+              alt="Victoria Dobrzhanska"
+              width="80"
+              height="80"
+            />
+            <h3 class="reviews-list-fullname">Victoria Dobrzhanska</h3>
+            <p class="reviews-list-text">
               I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.
             </p>
           </li>
-          <li>
-            <img src="./images/reviews/nazar-babenko.png" alt="Nazar Babenko" width="80" height="80" />
-            <h3>Nazar Babenko</h3>
-            <p>
+          <li class="reviews-list-item">
+            <img
+              class="reviews-list-avatar"
+              src="./images/reviews/nazar-babenko.png"
+              alt="Nazar Babenko"
+              width="80"
+              height="80"
+            />
+            <h3 class="reviews-list-fullname">Nazar Babenko</h3>
+            <p class="reviews-list-text">
               This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is
               smooth, and the chocolate is good.
             </p>
           </li>
-          <li>
-            <img src="./images/reviews/olena-kampusch.png" alt="Olena Kampusch" width="80" height="80" />
-            <h3>Olena Kampusch</h3>
-            <p>
+          <li class="reviews-list-item">
+            <img
+              class="reviews-list-avatar"
+              src="./images/reviews/olena-kampusch.png"
+              alt="Olena Kampusch"
+              width="80"
+              height="80"
+            />
+            <h3 class="reviews-list-fullname">Olena Kampusch</h3>
+            <p class="reviews-list-text">
               Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The
               wafer is soft but crunchy.
             </p>
           </li>
         </ul>
-        <button type="button">Leave a review</button>
+        <button class="leave-review-btn" type="button">Leave a review</button>
       </section>
     </main>
-    <footer>
-      <h2>Chocolate a delicious cure for a bad day</h2>
-      <address>
-        <p>Contact us</p>
-        <ul>
-          <li>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
-          </li>
-          <li>
-            <a href="mailto:simplycthoc@gmail.com">simplycthoc@gmail.com</a>
-          </li>
-        </ul>
-      </address>
-      <nav>
-        <ul>
-          <li>
-            <a href="./index.html">Home</a>
-          </li>
-          <li>
-            <a href="#making-process">How it’s made?</a>
-          </li>
-          <li>
-            <a href="#reviews">Chocolate is loved</a>
-          </li>
-        </ul>
-      </nav>
+    <!-- Page footer -->
+    <footer class="page-footer">
+      <div class="page-footer-left-side">
+        <h2 class="page-footer-title"><span class="accent-color">Chocolate</span> a delicious cure for a bad day</h2>
+        <address>
+          <p class="contact-title">Contact us</p>
+          <ul class="contact-list">
+            <li class="contact-list-item">
+              <a class="contact-list-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
+            </li>
+            <li class="contact-list-item">
+              <a class="contact-list-link" href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="page-footer-right-side">
+        <nav class="page-navigation">
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./index.html">Home</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#making-process">How it’s made?</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#reviews">Chocolate is loved</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </footer>
   </body>
 </html>
