--- a/pages/block-model.html
+++ b/pages/block-model.html
@@ -13,92 +13,98 @@
   <body>
     <!-- HEADER SECTION -->
     <header class="page-header">
-      <nav class="page-navigation">
-        <a class="logo" href="#">Logotype</a>
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="menu-link" href="./block-model.html">Home</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#about">About us</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#contacts">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="page-navigation">
+          <a class="logo" href="#">Logotype</a>
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./block-model.html">Home</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#about">About us</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#contacts">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <!-- HERO SECTION -->
       <section class="hero">
-        <h1 class="main-title">Main title</h1>
-        <p class="hero-description">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis delectus laudantium excepturi
-          explicabo? Laborum repellat minus neque, fuga eos quibusdam at iste voluptatum nemo veritatis culpa quae.
-          Laudantium, eius reiciendis?
-        </p>
-        <button class="buy-now-btn" type="button">Buy now</button>
+        <div class="container">
+          <h1 class="main-title">Main title</h1>
+          <p class="hero-description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis delectus laudantium excepturi
+            explicabo? Laborum repellat minus neque, fuga eos quibusdam at iste voluptatum nemo veritatis culpa quae.
+            Laudantium, eius reiciendis?
+          </p>
+          <button class="buy-now-btn" type="button">Buy now</button>
+        </div>
       </section>
       <!-- OUR PRODUCTS SECTION -->
       <section class="products">
-        <h2 class="title">Our products</h2>
-        <ul class="products-list">
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="../images/nike-sneaker.jpg"
-              alt="unpaired red Nike sneaker"
-              width="640"
-              height="427"
-            />
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="../images/nike-sneaker.jpg"
-              alt="unpaired red Nike sneaker"
-              width="640"
-              height="427"
-            />
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="../images/nike-sneaker.jpg"
-              alt="unpaired red Nike sneaker"
-              width="640"
-              height="427"
-            />
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="../images/nike-sneaker.jpg"
-              alt="unpaired red Nike sneaker"
-              width="640"
-              height="427"
-            />
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="../images/nike-sneaker.jpg"
-              alt="unpaired red Nike sneaker"
-              width="640"
-              height="427"
-            />
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="../images/nike-sneaker.jpg"
-              alt="unpaired red Nike sneaker"
-              width="640"
-              height="427"
-            />
-          </li>
-        </ul>
-        <button class="buy-now-btn" type="button">Buy now</button>
+        <div class="container">
+          <h2 class="title">Our products</h2>
+          <ul class="products-list">
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="../images/nike-sneaker.jpg"
+                alt="unpaired red Nike sneaker"
+                width="640"
+                height="427"
+              />
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="../images/nike-sneaker.jpg"
+                alt="unpaired red Nike sneaker"
+                width="640"
+                height="427"
+              />
+            </li>
+            <li class="products-list-item some-class">
+              <img
+                class="products-list-img"
+                src="../images/nike-sneaker.jpg"
+                alt="unpaired red Nike sneaker"
+                width="640"
+                height="427"
+              />
+            </li>
+            <li class="products-list-item some-class">
+              <img
+                class="products-list-img"
+                src="../images/nike-sneaker.jpg"
+                alt="unpaired red Nike sneaker"
+                width="640"
+                height="427"
+              />
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="../images/nike-sneaker.jpg"
+                alt="unpaired red Nike sneaker"
+                width="640"
+                height="427"
+              />
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="../images/nike-sneaker.jpg"
+                alt="unpaired red Nike sneaker"
+                width="640"
+                height="427"
+              />
+            </li>
+          </ul>
+          <button class="buy-now-btn" type="button">Buy now</button>
+        </div>
       </section>
       <!-- ABOUT SECTION -->
       <section class="about-us" id="about">
