--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
   <body>
     <!-- Page Header -->
     <header class="page-header">
-      <div class="container">
+      <div class="container page-header-container">
         <nav class="page-nav">
-          <a class="site-logo" href="./index.html"><i>SIMPLY</i> CHOCOLATE</a>
+          <a class="site-logo" href="./index.html">
+            <i>SIMPLY</i>&nbsp;CHOCOLATE
+            <svg class="site-logo-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
 
           <ul class="menu">
             <li class="menu-item">
@@ -36,6 +41,22 @@
             </li>
           </ul>
         </nav>
+        <ul class="social-list">
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg class="social-list-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -49,7 +70,14 @@
           <div class="hero-bottom-block">
             <button class="buy-now-btn" type="button">Buy now</button>
             <a class="how-made-link" href="#making-process">How it’s made</a>
-            <a class="scroll-down-link" href="#benefits"> scroll down </a>
+            <a class="scroll-down-link" href="#benefits">
+              scroll down
+              <span class="scroll-down-icon-wrapper">
+                <svg class="scroll-down-icon" width="22" height="22">
+                  <use href="./images/icons.svg#icon-scroll-down"></use>
+                </svg>
+              </span>
+            </a>
           </div>
         </div>
       </section>
@@ -60,6 +88,11 @@
           <h2 class="visually-hidden">Benefits of our chocolate</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <span class="benefits-list-icon-wrapper">
+                <svg class="benefits-list-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-chocolate"></use>
+                </svg>
+              </span>
               <h3 class="benefits-list-title">Unsurpassed taste</h3>
               <p class="benefits-list-text">
                 Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent
@@ -68,6 +101,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <span class="benefits-list-icon-wrapper">
+                <svg class="benefits-list-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-coin"></use>
+                </svg>
+              </span>
               <h3 class="benefits-list-title">Affordable price</h3>
               <p class="benefits-list-text">
                 Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of
@@ -76,6 +114,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <span class="benefits-list-icon-wrapper">
+                <svg class="benefits-list-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-spoon"></use>
+                </svg>
+              </span>
               <h3 class="benefits-list-title">Own production</h3>
               <p class="benefits-list-text">
                 We take pride in our own production process, ensuring that every step is carefully crafted to
@@ -109,6 +152,18 @@
                 height="160"
               />
               <h3 class="ingredients-list-title">milk chocolate</h3>
+              <div class="ingredient-overlay">
+                <h3 class="ingredient-overlay-title">Milk chocolate</h3>
+                <ul class="overlay-tags-list">
+                  <li class="overlay-tags-list-item">chocolate</li>
+                  <li class="overlay-tags-list-item">the benefits</li>
+                </ul>
+                <p class="ingredient-overlay-text">
+                  Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most
+                  consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian
+                  times. Although four-fifths of all milk chocolate is sold in the United States and Europe.
+                </p>
+              </div>
             </li>
             <li class="ingredients-list-item">
               <img
@@ -119,6 +174,19 @@
                 height="160"
               />
               <h3 class="ingredients-list-title">milk</h3>
+              <div class="ingredient-overlay">
+                <h3 class="ingredient-overlay-title">Milk</h3>
+                <ul class="overlay-tags-list">
+                  <li class="overlay-tags-list-item">milk</li>
+                  <li class="overlay-tags-list-item">the benefits</li>
+                </ul>
+                <p class="ingredient-overlay-text">
+                  Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of
+                  nutrition for young mammals (including breastfed human infants) before they are able to digest solid
+                  food.Early-lactation milk, which is called colostrum, contains antibodies that strengthen the immune
+                  system.
+                </p>
+              </div>
             </li>
             <li class="ingredients-list-item">
               <img
@@ -129,6 +197,19 @@
                 height="160"
               />
               <h3 class="ingredients-list-title">nuts</h3>
+              <div class="ingredient-overlay">
+                <h3 class="ingredient-overlay-title">nuts</h3>
+                <ul class="overlay-tags-list">
+                  <li class="overlay-tags-list-item">nuts</li>
+                  <li class="overlay-tags-list-item">the benefits</li>
+                </ul>
+                <p class="ingredient-overlay-text">
+                  Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten as
+                  part of a nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart
+                  disease. They’re a good source of fiber, healthy fats, and plant protein. Plus, they’re great on their
+                  own.
+                </p>
+              </div>
             </li>
             <li class="ingredients-list-item">
               <img
@@ -139,6 +220,19 @@
                 height="160"
               />
               <h3 class="ingredients-list-title">semi - sweet chocolate</h3>
+              <div class="ingredient-overlay">
+                <h3 class="ingredient-overlay-title">semi - sweet chocolate</h3>
+                <ul class="overlay-tags-list">
+                  <li class="overlay-tags-list-item">sweet chocolate</li>
+                  <li class="overlay-tags-list-item">the benefits</li>
+                </ul>
+                <p class="ingredient-overlay-text">
+                  Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an
+                  understanding of this type of chocolate is to compare it to a different type of chocolate. Semisweet
+                  is darker than milk chocolate. In a taste comparison, it has a slightly bitter taste whereas milk
+                  chocolate is sweeter and more mellow.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
