--- a/pages/media.html
+++ b/pages/media.html
@@ -12,5 +12,76 @@
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/media.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="page-header">
+      <div class="container">
+        <nav class="page-navigation">
+          <a href="" class="page-logo">Logotype</a>
+          <ul class="page-menu">
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 1</a>
+            </li>
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 2</a>
+            </li>
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 3</a>
+            </li>
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 4</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="sec">
+        <div class="container">
+          <h2 class="title">Section title 1</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum natus a, libero dolorem explicabo dolor fuga
+            enim illo id suscipit dolores officia deleniti, rerum molestias maiores? Distinctio, velit. Eius,
+            praesentium.
+          </p>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum natus a, libero dolorem explicabo dolor fuga
+            enim illo id suscipit dolores officia deleniti, rerum molestias maiores? Distinctio, velit. Eius,
+            praesentium.
+          </p>
+          <button class="btn" type="button">Click me</button>
+        </div>
+      </section>
+      <section class="sec">
+        <div class="container">
+          <h2 class="title">Section title 2</h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum natus a, libero dolorem explicabo dolor fuga
+            enim illo id suscipit dolores officia deleniti, rerum molestias maiores? Distinctio, velit. Eius,
+            praesentium.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <nav class="page-navigation">
+          <a href="" class="page-logo">Logotype</a>
+          <ul class="page-menu">
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 1</a>
+            </li>
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 2</a>
+            </li>
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 3</a>
+            </li>
+            <li class="page-menu-item">
+              <a href="" class="page-menu-link">link 4</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
