--- a/pages/retina-picture.html
+++ b/pages/retina-picture.html
@@ -23,7 +23,10 @@
           srcset="../images/retina-picture/img-tablet.jpg 1x, ../images/retina-picture/img-tablet@2x.jpg 2x"
           media="(min-width: 768px)"
         />
-        <source srcset="../images/retina-picture/img-mobile@2x.jpg 2x" media="(max-width: 767px)" />
+        <source
+          srcset="../images/retina-picture/img-mobile.jpg 1x, ../images/retina-picture/img-mobile@2x.jpg 2x"
+          media="(max-width: 767px)"
+        />
 
         <img src="../images/retina-picture/img-mobile.jpg" alt="retina image" />
       </picture>
