--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
             </a>
           </li>
         </ul>
+        <button class="open-mobile-menu-btn" type="button">
+          <svg class="open-mobile-menu-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="main-title">
             Treat yourself or a loved one to our finest ingredients for a moment
@@ -81,10 +86,10 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Benefits section -->
-      <section class="benefits section-paddings" id="benefits">
+      <!-- <section class="benefits section-paddings" id="benefits">
         <div class="container benefits-container">
           <h2 class="visually-hidden">Benefits of our chocolate</h2>
           <ul class="benefits-list">
@@ -133,10 +138,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Ingredients section -->
-      <section class="ingredients section-paddings">
+      <!-- <section class="ingredients section-paddings">
         <div class="container">
           <h2 class="section-title igredients-title">
             It all adds up to one exceptional
@@ -250,10 +255,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- How made section -->
-      <section class="how-made section-paddings" id="making-process">
+      <!-- <section class="how-made section-paddings" id="making-process">
         <div class="container">
           <h2 class="section-title how-made-title">
             How it’s <span class="accent-color">made</span>?
@@ -295,10 +300,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Reviews section -->
-      <section class="reviews" id="reviews">
+      <!-- <section class="reviews" id="reviews">
         <div class="container">
           <h2 class="section-title reviews-title">
             <span class="accent-color">Chocolate</span> is loved
@@ -351,10 +356,10 @@
           </ul>
           <button class="leave-review-btn" type="button">Leave a review</button>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Page footer -->
-    <footer class="page-footer">
+    <!-- <footer class="page-footer">
       <div class="container">
         <div class="page-footer-top-block">
           <h2 class="page-footer-title">
@@ -405,17 +410,18 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Modal Window -->
     <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
-          <svg class="modal-close-icon" width="28" height="28">
+          <svg class="modal-close-icon">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-slogan">
-          leave a review about <span class="accent-color">our chocolate</span>
+          leave a review <br />
+          about <span class="accent-color">our chocolate</span>
         </p>
         <form class="review-form">
           <div class="review-form-field-wrapper">
@@ -429,7 +435,7 @@
                 pattern="[a-zA-Zа-яА-ЯіІєЄїЇґҐʼ]+"
                 required
               />
-              <svg class="review-form-field-icon" width="24" height="24">
+              <svg class="review-form-field-icon">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
@@ -446,7 +452,7 @@
                 name="user-email"
                 required
               />
-              <svg class="review-form-field-icon" width="24" height="24">
+              <svg class="review-form-field-icon">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -465,7 +471,7 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
               />
-              <svg class="review-form-field-icon" width="24" height="24">
+              <svg class="review-form-field-icon">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -497,12 +503,53 @@
                   <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="review-form-privacy-link" href="">Privacy Policy</a>
+              <span class="review-form-policy-text">
+                I accept the terms and conditions of the
+                <a class="review-form-privacy-link" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="review-form-submit-btn" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+    <!-- Mobile menu -->
+    <div class="mobile-menu">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-btn" type="button">
+          <svg class="mobile-menu-cose-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-menu-list">
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="">Home</a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="">How it’s made?</a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a class="mobile-menu-list-link" href="">Chocolate is loved</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="mobile-menu-social-list">
+          <li class="mobile-menu-social-list-item">
+            <a class="mobile-menu-social-list-link" href="">
+              <svg class="mobile-menu-social-list-icon" width="22" height="22">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-social-list-item">
+            <a class="mobile-menu-social-list-link" href="">
+              <svg class="mobile-menu-social-list-icon" width="22" height="22">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
